--- a/_assets/css/gallery.css
+++ b/_assets/css/gallery.css
@@ -13,9 +13,12 @@
     background: #FFF;
     display: flex;
     position: relative;
-    box-shadow: 0 0 1.5em 0.2em rgba(0,0,0,1);
     animation: slideIn 0.3s ease-in;
     animation-fill-mode: both;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 
 @media (min-width: 600px) {
@@ -32,7 +35,6 @@
     }
 }
 
-
 .gallery li:nth-child(2) { animation-delay: 0.2s; }
 .gallery li:nth-child(3) { animation-delay: 0.3s; }
 .gallery li:nth-child(4) { animation-delay: 0.4s; }
@@ -46,7 +48,6 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    box-shadow: 0 0 1.5em 0.5em rgba(0,0,0,1);
     opacity: 0;
     transition: opacity 0.3s ease-in;
 }
@@ -59,7 +60,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    border: 0.5em solid #222;
     justify-content: center;
     padding: 1em;
 }
@@ -83,7 +83,6 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    box-shadow: 0 0 0.2em 0 rgba(0,0,0,0.5) inset;
 }
 
 .gallery a:hover span:before {
@@ -93,33 +92,13 @@
 .gallery img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 30em;
 }
 
-
-.modal {
-    position: fixed;
-    top: 0; left: 0; bottom: 0; right:0;
-    background: rgba(0,0,0,0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: none;
+.info {
+    padding: 1em;
 }
 
-.modal .inner {
-    max-width: 90vw;
-    max-height: 90vh;
-    display: block;
-    background: #FFF;
-    padding: 2em;
-    border-radius: 0.3em;
-    box-shadow: 0 0 1em 0.5em rgba(0,0,0,0.5);
-    overflow: hidden;
-}
-
-.modal .inner img {
-    display: block;
-    width: 100%;
-    height: auto;
+.job {
+    padding: 1em;
 }
