--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -9,7 +9,7 @@
 
 @import url('navigation.css');
 
-/* @import url('transtions.css'); */
+@import url('transtions.css');
 @import url('animations.css');
 
 @import url('gallery.css');
