--- a/docs/css/gallery.css
+++ b/docs/css/gallery.css
@@ -13,11 +13,14 @@
     background: #FFF;
     display: flex;
     position: relative;
-    box-shadow: 0 0 1.5em 0.2em rgba(0,0,0,1);
     -webkit-animation: slideIn 0.3s ease-in;
             animation: slideIn 0.3s ease-in;
     -webkit-animation-fill-mode: both;
             animation-fill-mode: both;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 
 @media (min-width: 600px) {
@@ -34,7 +37,6 @@
     }
 }
 
-
 .gallery li:nth-child(2) { -webkit-animation-delay: 0.2s; animation-delay: 0.2s; }
 .gallery li:nth-child(3) { -webkit-animation-delay: 0.3s; animation-delay: 0.3s; }
 .gallery li:nth-child(4) { -webkit-animation-delay: 0.4s; animation-delay: 0.4s; }
@@ -48,7 +50,6 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    box-shadow: 0 0 1.5em 0.5em rgba(0,0,0,1);
     opacity: 0;
     transition: opacity 0.3s ease-in;
 }
@@ -61,7 +62,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    border: 0.5em solid #222;
     justify-content: center;
     padding: 1em;
 }
@@ -85,7 +85,6 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    box-shadow: 0 0 0.2em 0 rgba(0,0,0,0.5) inset;
 }
 
 .gallery a:hover span:before {
@@ -95,33 +94,13 @@
 .gallery img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 30em;
 }
 
-
-.modal {
-    position: fixed;
-    top: 0; left: 0; bottom: 0; right:0;
-    background: rgba(0,0,0,0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: none;
+.info {
+    padding: 1em;
 }
 
-.modal .inner {
-    max-width: 90vw;
-    max-height: 90vh;
-    display: block;
-    background: #FFF;
-    padding: 2em;
-    border-radius: 0.3em;
-    box-shadow: 0 0 1em 0.5em rgba(0,0,0,0.5);
-    overflow: hidden;
-}
-
-.modal .inner img {
-    display: block;
-    width: 100%;
-    height: auto;
+.job {
+    padding: 1em;
 }
