--- a/docs/css/gallery.css
+++ b/docs/css/gallery.css
@@ -94,13 +94,26 @@
 .gallery img {
     display: block;
     width: 100%;
-    height: 30em;
+    height: auto;
 }
 
-.info {
-    padding: 1em;
+.gallery .name {
+    padding: 0.2em;
+    text-align: center;
+    font-weight: 900;
+    font-size: 1.5em;
+    padding-top: 1em;
 }
 
-.job {
+.gallery .info {
     padding: 1em;
+    text-align: center;
+    font-style: italic;
+}
+
+.gallery .job {
+    padding: 1em;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.2em;
 }
