Some changes in navigation and team page

--- a/docs/css/navigation.css
+++ b/docs/css/navigation.css
@@ -1,7 +1,3 @@
-.site-nav {
-
-}
-
 .site-nav > ul {
     display: flex;
     padding: 0;
@@ -37,3 +33,16 @@
 .site-nav a:hover i.fas:before {
     color: #FFF;
 }
+
+header nav ul li{
+    opacity: 0;
+    -webkit-animation: shake 0.1s linear;
+            animation: shake 0.1s linear;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+}
+
+header nav ul li:first-child {-webkit-animation-delay: 0.2s;animation-delay: 0.2s;}
+header nav ul li:nth-child(2){-webkit-animation-delay: 0.3s;animation-delay: 0.3s;}
+header nav ul li:nth-child(3){-webkit-animation-delay: 0.4s;animation-delay: 0.4s;}
+header nav ul li:nth-child(4){-webkit-animation-delay: 0.5s;animation-delay: 0.5s;}
