--- a/_assets/css/gallery.css
+++ b/_assets/css/gallery.css
@@ -42,6 +42,9 @@
 .gallery li:nth-child(6) { animation-delay: 0.6s; }
 .gallery li:nth-child(7) { animation-delay: 0.7s; }
 .gallery li:nth-child(8) { animation-delay: 0.8s; }
+.gallery li:nth-child(9) { animation-delay: 0.9s; }
+.gallery li:nth-child(10) { animation-delay: 1.0s; }
+.gallery li:nth-child(11) { animation-delay: 1.1s; }
 
 .gallery li:before {
     display: block;
