--- a/_assets/css/navigation.css
+++ b/_assets/css/navigation.css
@@ -1,7 +1,3 @@
-.site-nav {
-
-}
-
 .site-nav > ul {
     display: flex;
     padding: 0;
@@ -37,3 +33,14 @@
 .site-nav a:hover i.fas:before {
     color: #FFF;
 }
+
+header nav ul li{
+    opacity: 0;
+    animation: shake 0.1s linear;
+    animation-fill-mode: both;
+}
+
+header nav ul li:first-child {animation-delay: 0.2s;}
+header nav ul li:nth-child(2){animation-delay: 0.3s;}
+header nav ul li:nth-child(3){animation-delay: 0.4s;}
+header nav ul li:nth-child(4){animation-delay: 0.5s;}
