--- a/docs/css/animations.css
+++ b/docs/css/animations.css
@@ -1,7 +1,3 @@
-.page-animations {
-    min-height: 100vh;
-}
-
 @-webkit-keyframes slideIn {
     from {
         opacity: 0;
@@ -28,52 +24,80 @@
 
 @-webkit-keyframes shake {
     0% {
+        opacity: 0;
         transform: translateX(0);
     }
 
     20% {
-        transform: translateX(-2em);
+        transform: translateX(-1.5em);
     }
 
     40% {
-        transform: translateX(2em);
+        transform: translateX(1.5em);
     }
 
     60% {
-        transform: translateX(-1em);
+        transform: translateX(-1.0em);
     }
 
     80% {
-        transform: translateX(1em);
+        transform: translateX(1.0em);
     }
 
     100% {
+        opacity: 1;
         transform: translateX(0);
     }
 }
 
 @keyframes shake {
     0% {
+        opacity: 0;
         transform: translateX(0);
     }
 
     20% {
-        transform: translateX(-2em);
+        transform: translateX(-1.5em);
     }
 
     40% {
-        transform: translateX(2em);
+        transform: translateX(1.5em);
     }
 
     60% {
-        transform: translateX(-1em);
+        transform: translateX(-1.0em);
     }
 
     80% {
-        transform: translateX(1em);
+        transform: translateX(1.0em);
     }
 
     100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes fadeInWithMovementAtRight{
+    0%{
+        opacity: 0;
+        transform: translateX(-2rem);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeInWithMovementAtRight{
+    0%{
+        opacity: 0;
+        transform: translateX(-2rem);
+    }
+
+    100%{
+        opacity: 1;
         transform: translateX(0);
     }
 }
