--- a/docs/css/gallery.css
+++ b/docs/css/gallery.css
@@ -44,6 +44,9 @@
 .gallery li:nth-child(6) { -webkit-animation-delay: 0.6s; animation-delay: 0.6s; }
 .gallery li:nth-child(7) { -webkit-animation-delay: 0.7s; animation-delay: 0.7s; }
 .gallery li:nth-child(8) { -webkit-animation-delay: 0.8s; animation-delay: 0.8s; }
+.gallery li:nth-child(9) { -webkit-animation-delay: 0.9s; animation-delay: 0.9s; }
+.gallery li:nth-child(10) { -webkit-animation-delay: 1.0s; animation-delay: 1.0s; }
+.gallery li:nth-child(11) { -webkit-animation-delay: 1.1s; animation-delay: 1.1s; }
 
 .gallery li:before {
     display: block;
