--- a/_assets/css/gallery.css
+++ b/_assets/css/gallery.css
@@ -118,3 +118,9 @@
     font-weight: 700;
     font-size: 1.2em;
 }
+
+.gallery .icons {
+    text-align: center;
+    font-size: 1.7em;
+    font-weight: 800;
+}
