--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -44,7 +44,7 @@
         </main>
 
         <footer class="site-footer">
-            <p>All rights reserved &copy; {{ site.title }}</p>
+            {% include footer.html location="footer" %}
         </footer>
 
     </div>
