--- a/docs/css/gallery.css
+++ b/docs/css/gallery.css
@@ -120,3 +120,9 @@
     font-weight: 700;
     font-size: 1.2em;
 }
+
+.gallery .icons {
+    text-align: center;
+    font-size: 1.7em;
+    font-weight: 800;
+}
