--- a/docs/css/site-footer.css
+++ b/docs/css/site-footer.css
@@ -1,5 +1,23 @@
 .site-footer {
-    border-top: 1px solid var(--color-border-default);
+    /* border-top: 5px solid var(--color-link-default);
     margin-top: var(--spacing-layout-elements);
     padding-top: calc( var(--spacing-layout-elements) / 2 );
+    background: var(--color-bcg-default);
+    border-radius: 1em;
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75); */
+
+
+
+    margin-top: 3em;
+    text-align: center;
+}
+
+.site-footer-text {
+    font-size: 1.5em;
+    font-weight: 600;
+    color: var(--color-link-default);
+}
+
+.site-footer-button {
+    
 }
