--- a/docs/css/site-header.css
+++ b/docs/css/site-header.css
@@ -1,13 +1,17 @@
 .site-header {
-    border-bottom: 1px solid var(--color-border-default);
+    /* border-bottom: 5px solid var(--color-link-default);
     margin-bottom: var(--spacing-layout-elements);
     padding-bottom: calc( var(--spacing-layout-elements) / 2 );
+    background: var(--color-bcg-default);
+    border-radius: 1em;
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75); */
 }
 
 .site-title {
     margin: 0;
     padding: 0;
-    font-size: 2em;
+    font-size: 3em;
+    /* padding-left: 0.5em; */
 }
 
 .site-title a {
