Finishing Token Sale Page.

--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -8,6 +8,32 @@
         opacity: 1;
         transform: translate(0);
     }
+
+    /* 0% {
+        opacity: 0;
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-1.5em);
+    }
+
+    40% {
+        transform: translateX(1.5em);
+    }
+
+    60% {
+        transform: translateX(-1.0em);
+    }
+
+    80% {
+        transform: translateX(1.0em);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    } */
 }
 
 @keyframes shake {
