--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,4 @@
 
 <div class="site-footer-info"><a>Helpful Links</a></div>
 
-<div class="footer-icons"><i class="fab fa-linkedin"></i>     <i class="fab fa-twitter-square"></i>     <i class="fab fa-github-square"></i>     <i class="fab fa-facebook-square"></i>     <i class="fab fa-instagram"></i>     <i class="fas fa-envelope-square"></i></div>
+<div class="footer-icons"><i class="fab fa-linkedin"></i>     <i class="fab fa-twitter-square"></i>     <i class="fab fa-github-square"></i>   <i class="fab fa-telegram"></i>     <i class="fab fa-facebook-square"></i>     <i class="fab fa-instagram"></i>     <i class="fas fa-envelope-square"></i></div>
