--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -35,9 +35,9 @@
 
         <main class="site-main">
 
-            {% if page.title %}
+            <!-- {% if page.title %}
             <h1>{{page.title}}</h1>
-            {% endif %}
+            {% endif %} -->
 
             {{content}}
 
