--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -1,5 +1,5 @@
 @keyframes slideIn {
-    from {
+    /* from {
         opacity: 0;
         transform: translate(-2em, -2em);
     }
@@ -7,33 +7,33 @@
     to {
         opacity: 1;
         transform: translate(0);
-    }
+    } */
 
-    /* 0% {
+    0% {
         opacity: 0;
-        transform: translateX(0);
+        transform: translate(-4em, 0);
     }
 
     20% {
-        transform: translateX(-1.5em);
+        transform: translate(-2.5em, 0);
     }
 
     40% {
-        transform: translateX(1.5em);
+        transform: translate(-1em, 0);
     }
 
     60% {
-        transform: translateX(-1.0em);
+        transform: translate(0, 0);
     }
 
     80% {
-        transform: translateX(1.0em);
+        transform: translate(2.5em, 0);
     }
 
     100% {
         opacity: 1;
-        transform: translateX(0);
-    } */
+        transform: translate(0, 0);
+    }
 }
 
 @keyframes shake {
