--- a/docs/css/animations.css
+++ b/docs/css/animations.css
@@ -133,7 +133,7 @@
 @-webkit-keyframes fadeInWithMovementAtRight{
     0%{
         opacity: 0;
-        transform: translateX(-2rem);
+        transform: translateX(-3rem);
     }
 
     100%{
@@ -145,11 +145,63 @@
 @keyframes fadeInWithMovementAtRight{
     0%{
         opacity: 0;
-        transform: translateX(-2rem);
+        transform: translateX(-3rem);
     }
 
     100%{
         opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes smallShake {
+    0% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-0.2em);
+    }
+
+    40% {
+        transform: translateX(0.2em);
+    }
+
+    60% {
+        transform: translateX(-0.1em);
+    }
+
+    80% {
+        transform: translateX(0.1em);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes smallShake {
+    0% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-0.2em);
+    }
+
+    40% {
+        transform: translateX(0.2em);
+    }
+
+    60% {
+        transform: translateX(-0.1em);
+    }
+
+    80% {
+        transform: translateX(0.1em);
+    }
+
+    100% {
         transform: translateX(0);
     }
 }
