--- a/_assets/css/tokensale.css
+++ b/_assets/css/tokensale.css
@@ -20,12 +20,25 @@
 }
 
 .tokensale-card {
-    display: block;
-    border: 1px solid black;
-    border-radius: 1em;
     text-align: center;
     overflow: hidden;
     grid-column: span 6;
+}
+
+.tokensale-card {
+    display: block;
+    border-radius: 1em;
+    border: 1px solid transparent;
+    animation: fadeInWithMovementFromBottom 1.1s ease-in;
+    animation-fill-mode: both;
+    opacity: 0.8;
+}
+
+.tokensale-card:hover {
+    display: block;
+    opacity: 1;
+    border: 1px solid var(--color-link-default);
+    box-shadow: 1px 1px 11px 1px rgba(0,0,0,0.75);
 }
 
 .tokensale-card header {
@@ -93,7 +106,7 @@
     border: 2px solid black;
 }
 
-@media ( min-width: 900px ) {
+@media ( min-width: 750px ) {
     .tokensale-card {
         grid-column: span 3;
     }
