--- a/docs/css/animations.css
+++ b/docs/css/animations.css
@@ -132,25 +132,41 @@
 
 @-webkit-keyframes fadeInWithMovementAtRight{
     0%{
-        opacity: 0;
         transform: translateX(-3rem);
     }
 
     100%{
-        opacity: 1;
         transform: translateX(0);
     }
 }
 
 @keyframes fadeInWithMovementAtRight{
     0%{
-        opacity: 0;
         transform: translateX(-3rem);
     }
 
     100%{
-        opacity: 1;
         transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes fadeInWithMovementFromBottom{
+    0%{
+        transform: translateY(33rem);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInWithMovementFromBottom{
+    0%{
+        transform: translateY(33rem);
+    }
+
+    100%{
+        transform: translateY(0);
     }
 }
 
