--- a/docs/css/news.css
+++ b/docs/css/news.css
@@ -1,3 +1,8 @@
+.main-news-heading {
+    padding: 0.4em;
+    border-bottom: 1px solid black;
+}
+
 .posts-headers {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -5,9 +10,12 @@
     grid-row-gap: 5em;
 }
 
+.news-subtitle {
+    color: black;
+}
+
 .news-header {
     display: block;
-    opacity: 0.8;
     border-radius: 1em;
     border: 1px solid transparent;
     padding: 1em;
@@ -15,6 +23,7 @@
             animation: fadeInWithMovementAtRight 0.3s ease-in;
     -webkit-animation-fill-mode: both;
             animation-fill-mode: both;
+    opacity: 0.8;
 }
 
 .news-header:hover {
@@ -30,12 +39,34 @@
     grid-column: span 6;
 }
 
-.news-media {
-    background-size: cover;
+.post-media img{
+    width: 100%;
+    height: auto;
     border-radius: 1em;
     border: 1px solid white;
     box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
-    height: 15em;
+}
+
+.layout-post-media {
+    text-align: center;
+    padding: 2em;
+}
+
+.layout-post-media img {
+    width: 70%;
+    height: auto;
+    border-radius: 1em;
+    border: 1px solid white;
+    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
+}
+
+/* Post Layout */
+
+.layout-post-title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 2.5em;
+    margin: 0;
 }
 
 @media ( min-width: 900px ) {
