--- a/docs/css/news.css
+++ b/docs/css/news.css
@@ -41,6 +41,10 @@
     text-align: center;
 }
 
+.single-news a {
+    height: 100%;
+}
+
 .news-media img{
     width: 100%;
     height: auto;
@@ -94,7 +98,7 @@
     }
 }
 
-@media ( min-width: 1200px ) {
+@media ( min-width: 1024px ) {
     .single-news {
         grid-column: span 2;
     }
