--- a/_assets/scss/_news.scss
+++ b/_assets/scss/_news.scss
@@ -23,45 +23,53 @@
     animation: fadeInWithMovementAtRight 0.3s ease-in;
     animation-fill-mode: both;
     opacity: 0.8;
-}
 
-.news-header:hover {
-    display: block;
-    opacity: 1;
-    border: 1px solid var(--color-link-default);
-    box-shadow: inset 1px 1px 11px 1px rgba(0,0,0,0.75);
-    /* animation: smallShake 0.1s ease-in;
-    animation-fill-mode: both; */
+    &:hover {
+        display: block;
+        opacity: 1;
+        border: 1px solid var(--color-link-default);
+        box-shadow: inset 1px 1px 11px 1px rgba(0, 0, 0, 0.75);
+        /* animation: smallShake 0.1s ease-in;
+        animation-fill-mode: both; */
+    }
 }
 
 .single-news {
     grid-column: span 6;
     text-align: center;
+
+    @include monitorSize (mobile) {
+        grid-column: span 3;
+    }
+
+    @include monitorSize (desktop) {
+        grid-column: span 2;
+    }
+
+    a {
+        height: 100%;
+    }
 }
 
-.single-news a {
-    height: 100%;
-}
-
-.news-media img{
+.news-media img {
     width: 100%;
     height: auto;
     border-radius: 1em;
     border: 1px solid white;
-    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.75);
 }
 
 .layout-news-media {
     text-align: center;
     padding: 2em;
-}
 
-.layout-news-media img {
-    width: 70%;
-    height: auto;
-    border-radius: 1em;
-    border: 1px solid white;
-    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
+    img {
+        width: 70%;
+        height: auto;
+        border-radius: 1em;
+        border: 1px solid white;
+        box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.75);
+    }
 }
 
 .layout-news-title {
@@ -74,30 +82,18 @@
 .go-back-wrapper {
     text-align: center;
     border-bottom: 1px solid black;
-}
 
-.go-back-wrapper a {
-    padding: 0.5em;
-    border: 1px solid var(--color-link-default);
-    border-radius: 1em;
-    display: inline-block;
-    margin: 2em;
-}
+    a {
+        padding: 0.5em;
+        border: 1px solid var(--color-link-default);
+        border-radius: 1em;
+        display: inline-block;
+        margin: 2em;
 
-.go-back-wrapper a:hover {
-    border: 1px solid white;
-    color: white;
-    background: var(--color-link-default);
-}
-
-@media ( min-width: 750px ) {
-    .single-news {
-        grid-column: span 3;
-    }
-}
-
-@media ( min-width: 1024px ) {
-    .single-news {
-        grid-column: span 2;
+        &:hover {
+            border: 1px solid white;
+            color: white;
+            background: var(--color-link-default);
+        }
     }
 }
