--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     font-size: 3em;
-    /* padding-left: 0.5em; */
-}
 
-.site-title a {
-    display: block;
-    padding: 0.5em 0;
+    /* padding-left: 0.5em; */
+    a {
+        display: block;
+        padding: 0.5em 0;
+    }
 }
