--- a/_assets/scss/_tokensale.scss
+++ b/_assets/scss/_tokensale.scss
@@ -1,9 +1,3 @@
-.tokensale-container {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 2em;
-}
-
 .tokensale-main-heading {
     text-align: center;
     margin: 2em;
@@ -19,75 +13,86 @@
     margin-bottom: 2em;
 }
 
+.tokensale-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 2em;
+}
+
 .tokensale-card {
     text-align: center;
     overflow: hidden;
     grid-column: span 6;
-}
-
-.tokensale-card {
     display: block;
     border-radius: 1em;
     border: 1px solid transparent;
     animation: fadeInWithMovementFromBottom 1.1s ease-in;
     animation-fill-mode: both;
     opacity: 0.8;
-}
 
-.tokensale-card:hover {
-    display: block;
-    opacity: 1;
-    border: 1px solid var(--color-link-default);
-    box-shadow: 1px 1px 11px 1px rgba(0,0,0,0.75);
-}
+    @include monitorSize (mobile) {
+        grid-column: span 3;
+    }
 
-.tokensale-card header {
-    padding: 1em;
-    margin: 0;
-    background: var(--color-tokensale-main);
-    color: var(--color-bcg-default);
-}
+    @include monitorSize (desktop) {
+        grid-column: span 2;
+    }
 
-.tokensale-card main {
-    background: var(--color-tokensale-bgrd);
-    padding: 1em;
-}
+    &:hover {
+        display: block;
+        opacity: 1;
+        border: 1px solid var(--color-link-default);
+        box-shadow: 1px 1px 11px 1px rgba(0, 0, 0, 0.75);
+    }
 
-.tokensale-card main h3 {
-    margin: 0;
-}
+    header {
+        padding: 1em;
+        margin: 0;
+        background: var(--color-tokensale-main);
+        color: var(--color-bcg-default);
+    }
 
-.tokensale-card main ul {
-    padding: 0;
-    margin: 2em;
-}
+    main {
+        background: var(--color-tokensale-bgrd);
+        padding: 1em;
 
-.tokensale-card main li {
-    list-style: none;
-    color: red;
-    text-align: center;
-    font-size: 1.2em;
-}
+        h3 {
+            margin: 0;
+        }
 
-.tokensale-card footer {
-    padding: 2em;
-    background: var(--color-tokensale-bgrd);
-}
+        ul {
+            padding: 0;
+            margin: 2em;
+        }
 
-.tokensale-card footer a {
-    padding: 1em;
-    background: var(--color-btn-bgrd);
-    color: var(--color-btn-text);
-    border: 2px solid transparent;
-    font-weight: 700;
-    border-radius: 1em;
-}
+        li {
+            list-style: none;
+            color: red;
+            text-align: center;
+            font-size: 1.2em;
+        }
+    }
 
-.tokensale-card footer a:hover {
-    cursor: pointer;
-    background: var(--color-btn-text);
-    color: var(--color-btn-bgrd);
-    border: 2px solid black;
+    footer {
+        padding: 2em;
+        background: var(--color-tokensale-bgrd);
+
+        a {
+            padding: 1em;
+            background: var(--color-btn-bgrd);
+            color: var(--color-btn-text);
+            border: 2px solid transparent;
+            font-weight: 700;
+            border-radius: 1em;
+
+            &:hover {
+                cursor: pointer;
+                background: var(--color-btn-text);
+                color: var(--color-btn-bgrd);
+                border: 2px solid black;
+            }
+        }
+    }
 }
 
 .dashed {
@@ -104,16 +109,4 @@
     background: var(--color-btn-bgrd);
     color: var(--color-btn-text);
     border: 2px solid black;
-}
-
-@media ( min-width: 750px ) {
-    .tokensale-card {
-        grid-column: span 3;
-    }
-}
-
-@media ( min-width: 1024px ) {
-    .tokensale-card {
-        grid-column: span 2;
-    }
 }
